[metadata]
name = vnpy_binance_pro
version = 2023.4.14.1
url = https://github.com/monk-after-90s/vnpy-binance-pro
license = MIT
author = antas
author_email = 907333918@qq.com
description = BINANCE gateway for vn.py quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
zip_safe = False
install_requires =
    vnpy_rest
    vnpy_websocket
    requests
    vnpy_crypto
