[metadata]
name = vnpy_binance
version = attr: vnpy_binance.__version__
author = VeighNa Global
author_email = veighna@hotmail.com
description = BINANCE trading gateway for VeighNa Evo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/veighna-global
license = MIT
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    binance
    btc
    crypto
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
zip_safe = False
install_requires =
    vnpy_evo
